--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -23,50 +23,34 @@
   <main>
     <!-- Menu de navigation -->
     <header class="header">
-      <nav class="navbar navbar-expand-lg menu">
-        <div class="container-fluid">
-          <a class="nav-logo" href="index.html">ZOE TRANSPORT</a>
-          <button class="navbar-toggler btn-shop" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa-solid fa-bars"></span>
-          </button>
-          <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
-            <div class="row w-75">
-              <div class="col-md-8">
-                <ul class="navbar-nav">
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="index.html">Accueil</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe active" aria-current="page" href="about-us.html">Qui sommes-nous</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="reserver.html">Réserver</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-4">
-                <ul class="navbar-nav justify-content-end">
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
-                      data-bs-target="#login">Connexion</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
-                      data-bs-target="#register">S'inscrire</a>
-                  </li>
-                  <!-- <li class="nav-list">
-                    <a class="nav-link-zoe" href="#">Tableau de bord</a>
-                  </li> -->
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+      <nav>
+        <img src="img/logo.png" alt="" class="logo">
+        <button class="menu-toggle" id="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="menu-lg">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="reserver.html">Réserver</a></li>
+        </ul>
+        <a href="login.html" class="button">Connexion</a>
       </nav>
+      <div class="nav-mobile">
+        <div class="btn-close-menu">
+          <button id="close-btn">
+            <i class="fas fa-close"></i>
+          </button>
+        </div>
+        <div class="menu-wrapper" id="menu-wrapper">
+          <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="reserver.html">Réserver</a></li>
+            <li><a href="login.html">Connexion</a></li>
+          </ul>
+        </div>
     </header>
     <!-- /Menu de navigation -->
 
@@ -84,143 +68,154 @@
     <div class="container user-dash" id="user-dash">
       <div class="user-profil row">
         <div class="col-sm-12 col-md-3 col-lg-2 mb-3 mb-md-0">
-            <div class="img-profil">
-                <img src="img/profil-default.png" alt="">
-            </div>
+          <div class="img-profil">
+            <img src="img/profil-default.png" alt="">
+          </div>
         </div>
         <div class="col-sm-12 col-md-9 col-lg-10">
-            <div class="info">
-                <div class="top-info text-center text-md-start">
-                    <h5>Nom complet </h5>
-                </div>
-                <div class="bottom-info pt-2">
-                    <div class="row w-100">
-                        <div class="col-4 col-sm-4 col-md-3">
-                            <div class="nbr-info">
-                                <b>Nombre</b>
-                                <span>titre</span>
-                            </div>                            
-                        </div>
-                        <div class="col-4 col-sm-4 col-md-3">
-                            <div class="nbr-info">
-                                <b>Nombre</b>
-                                <span>titre</span>
-                            </div>                            
-                        </div>
-                        <div class="col-4 col-sm-4 col-md-3">
-                            <div class="nbr-info last">
-                                <b>Nombre</b>
-                                <span>titre</span>
-                            </div>                            
-                        </div>
-                        <div class="col-sm-12 col-md-3 mt-3 mt-md-0">
-                            <div class="btn-change-pwd">
-                                <button>Changer le mot de passe</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          <div class="info">
+            <div class="top-info text-center text-md-start">
+              <h5>Nom complet </h5>
             </div>
+            <div class="bottom-info pt-2">
+              <div class="row w-100">
+                <div class="col-4 col-sm-4 col-md-3">
+                  <div class="nbr-info">
+                    <b>08</b>
+                    <span>Rserver</span>
+                  </div>
+                </div>
+                <div class="col-4 col-sm-4 col-md-3">
+                  <div class="nbr-info">
+                    <b>02</b>
+                    <span>Annuler</span>
+                  </div>
+                </div>
+                <div class="col-4 col-sm-4 col-md-3">
+                  <div class="nbr-info last">
+                    <b>05</b>
+                    <span>Reporter</span>
+                  </div>
+                </div>
+                <div class="col-sm-12 col-md-3 mt-3 mt-md-0">
+                  <div class="btn-change-pwd">
+                    <button data-bs-toggle="modal" data-bs-target="#editProfile">Modifier profile</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="user-historique">
         <div class="title">
-            <h3>Historique</h3>
+          <h3>Historique</h3>
         </div>
         <div class="historique">
-            <div class="table-responsive">
-                <table id="user-historique" class="table custom-table table-striped datatable">
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Destination</th>
-                            <th>Date départ</th>
-                            <th>Nombres de voyageur</th>
-                            <th>Prix</th>
-                            <th>status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                10/10/2022
-                            </td>
-                            <td>Pointe-Noire</td>
-                            <td>
-                                15/10/2022
-                            </td>
-                            <td>1</td>
-                            <td>15000 xaf</td>
-                            <td>Réserver</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                25/10/2022
-                            </td>
-                            <td>Dolisie</td>
-                            <td>
-                                1/11/2022
-                            </td>
-                            <td>1</td>
-                            <td>15000 xaf</td>
-                            <td>Réserver</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                31/10/2022
-                            </td>
-                            <td>Brazzaville</td>
-                            <td>
-                                10/11/2022
-                            </td>
-                            <td>1</td>
-                            <td>15000 xaf</td>
-                            <td>Réserver</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                11/11/2022
-                            </td>
-                            <td>Brazzaville</td>
-                            <td>
-                                16/11/2022
-                            </td>
-                            <td>1</td>
-                            <td>15000 xaf</td>
-                            <td>Réserver</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+          <div class="table-responsive">
+            <table id="user-historique" class="table custom-table table-striped datatable">
+              <thead>
+                <tr>
+                  <th>Date</th>
+                  <th>Destination</th>
+                  <th>Date départ</th>
+                  <th>Nombres de voyageur</th>
+                  <th>Prix</th>
+                  <th>status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    10/10/2022
+                  </td>
+                  <td>Pointe-Noire</td>
+                  <td>
+                    15/10/2022
+                  </td>
+                  <td>1</td>
+                  <td>15000 xaf</td>
+                  <td>Réserver</td>
+                </tr>
+                <tr>
+                  <td>
+                    25/10/2022
+                  </td>
+                  <td>Dolisie</td>
+                  <td>
+                    1/11/2022
+                  </td>
+                  <td>1</td>
+                  <td>15000 xaf</td>
+                  <td>Réserver</td>
+                </tr>
+                <tr>
+                  <td>
+                    31/10/2022
+                  </td>
+                  <td>Brazzaville</td>
+                  <td>
+                    10/11/2022
+                  </td>
+                  <td>1</td>
+                  <td>15000 xaf</td>
+                  <td>Réserver</td>
+                </tr>
+                <tr>
+                  <td>
+                    11/11/2022
+                  </td>
+                  <td>Brazzaville</td>
+                  <td>
+                    16/11/2022
+                  </td>
+                  <td>1</td>
+                  <td>15000 xaf</td>
+                  <td>Réserver</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
     <!-- /dash-user -->
 
-    <!-- Modal Login -->
-    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <!-- Modal edit profile -->
+    <div class="modal fade" id="editProfile" tabindex="-1" aria-labelledby="editProfileLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">S'identifier</h5>
+            <h5 class="modal-title" id="editProfileLabel">Edition du profil</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <div class="login">
+            <div class="form-edit">
               <form action="">
-                <div class="form-group">
-                  <label for="fullname">Nom d'utilisateur</label>
-                  <input type="text" name="fullname" id="fullname" placeholder="Nom d'utilisateur">
+                <div class="user_pic">
+                  <img src="img/" alt="">
+                  <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                  <input type="file" name="picture" id="add_pic">
                 </div>
                 <div class="form-group">
-                  <label for="fullname">Mot de passe</label>
-                  <input type="password" name="fullname" id="fullname" placeholder="Mot de passe">
+                  <label for="full_name">Nom et prénom</label>
+                  <input type="text" name="full_name" id="full_name">
                 </div>
-                <div class="forgot">
-                  <a href="">Mot de passe oublié ?</a>
+                <div class="form-group">
+                  <label for="birthday">Date de naissance</label>
+                  <input type="date" name="birthday" id="birthday">
+                </div>
+                <div class="form-group">
+                  <label for="city">Ville</label>
+                  <input type="text" name="city" id="city">
+                </div>
+                <div class="form-group">
+                  <label for="phone">Téléphone</label>
+                  <input type="tel" name="phone" id="phone">
                 </div>
                 <div class="form-submit">
-                  <button>Se connecter <i class="fa-solid fa-right-to-bracket"></i></button>
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#editPassword" data-bs-dismiss="modal">Changer mot de passe</a href="#">
+                  <button type="submit">Mettre à jour</button>
                 </div>
               </form>
             </div>
@@ -228,45 +223,34 @@
         </div>
       </div>
     </div>
-    <!-- /Modal Login -->
+    <!-- /Modal edit profile -->
 
-    <!-- Modal Register -->
-    <div class="modal fade" id="register" tabindex="-1" aria-labelledby="registrModalLabel" aria-hidden="true">
+    <!-- Change password -->
+    <div class="modal fade" id="editPassword" tabindex="-1" aria-labelledby="editPasswordLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">S'enregister</h5>
+            <h5 class="modal-title" id="editPasswordLabel">Changer mot de passe</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <div class="login">
+            <div class="form-edit">
               <form action="">
                 <div class="form-group">
-                  <label for="lastname">Nom</label>
-                  <input type="text" name="lastname" id="lastname" placeholder="Nom">
+                  <label for="old_pwd">Ancien mot de passe</label>
+                  <input type="password" name="old_pwd" id="old_pwd" placeholder="Tapez votre ancien mot de passe">
                 </div>
                 <div class="form-group">
-                  <label for="firstname">Prénom</label>
-                  <input type="text" name="firstname" id="firstname" placeholder="Prénom">
+                  <label for="pwd">Nouveau mot de passe</label>
+                  <input type="password" name="pwd" id="pwd" placeholder="Tapez votre nouveau mot de passe">
                 </div>
                 <div class="form-group">
-                  <label for="firstname">Email</label>
-                  <input type="email" name="email" id="email" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <label for="pwd">Mot de passe</label>
-                  <input type="password" name="pwd" id="pwd" placeholder="Mot de passe">
-                </div>
-                <div class="form-group">
-                  <label for="conf-pwd">Confirmez mot de passe</label>
-                  <input type="password" name="conf-pwd" id="conf-pwd" placeholder="Confirmez mot de passe">
-                </div>
-                <div class="form-group-check">
-                  <input type="checkbox" name="user-cond" id="user-cond">
-                  <label for="user-cond">J'accepte <a href="javascrip:void(0);">les conditions d'utilisation</a></label>
+                  <label for="conf_pwd">Confirmer votre mot de passe</label>
+                  <input type="password" name="conf_pwd" id="conf_pwd" placeholder="Retapez votre nouveau mot de passe">
                 </div>
                 <div class="form-submit">
-                  <button>S'inscire</button>
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#editProfile" data-bs-dismiss="modal">Editer profil</a>
+                  <button type="submit">Mettre à jour</button>
                 </div>
               </form>
             </div>
@@ -274,7 +258,40 @@
         </div>
       </div>
     </div>
-    <!-- /Modal Register -->
+    <!-- /Change password -->
+
+    <!-- <div class="modal fade" id="editProfile" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalToggleLabel">Modal 1</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Show a second modal and hide this one with the button below.
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#editPassword" data-bs-toggle="modal" data-bs-dismiss="modal">Open second modal</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="editPassword" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalToggleLabel2">Modal 2</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Hide this modal and show the first with the button below.
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#editProfile" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
     <!-- Footer -->
     <footer class="menu mt-4 px-3 pt-5 pb-3">
@@ -298,10 +315,13 @@
                   <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
                 </li>
                 <li class="footer-list">
-                  <a class="footer-link" href="about-us.html">Qui sommes-nous</a>
+                  <a class="footer-link" href="nos-tarifs.html">Nos Tarifs</a>
                 </li>
                 <li class="footer-list">
                   <a class="footer-link" href="contact.html">Contact</a>
+                </li>
+                <li class="footer-list">
+                  <a class="footer-link" href="reserver.html">Résever</a>
                 </li>
               </ul>
             </div>
